# Sentinel.ai

./: .gitignore  README.md
backend/: main.py  pyproject.toml  secrets.env
backend/app/: config.py  constants.py  db.py  exceptions.py  helpers.py  logger.py  utils.py
backend/app/api/: api_handlers.py  api_schema.py  api_schema_helper.py  background.py
backend/app/models/: botsort_tracker_config.yaml
backend/app/services/: asset_management_service.py  video_analysis_service.py
frontend/: API_INTEGRATION.md  CLOUDINARY_DELETE_BACKEND.md  CLOUDINARY_SETUP.md  README.md  config.js  environment.css  environment.html  environment.js  index.html  script.js  styles.css  uploads.css  uploads.html  uploads.js
frontend/images/persons/: README.md
